added payment page

--- a/static/styles/detailspage.scss
+++ b/static/styles/detailspage.scss
@@ -146,6 +146,7 @@
     [class="contentDT"] {
         max-width: 80%;
         max-height: 80%;
+        width: 62vw;
         bottom: 8vh;
         padding: 0;
     }
